--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -206,6 +206,11 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Media\Social\facebook.png" />
+    <Content Include="Media\Social\instagram.png" />
+    <Content Include="Media\Social\snapchat.png" />
+    <Content Include="Media\Social\twitter.png" />
+    <Content Include="Media\Social\youtube.png" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
