--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -187,6 +187,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MapController.cs" />
     <Compile Include="Controllers\PetsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -207,6 +208,7 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Catalogue.css" />
     <Content Include="Content\form.css" />
     <Content Include="Content\HomePage.css" />
     <Content Include="favicon.ico" />
@@ -300,6 +302,7 @@
     <Content Include="Views\Pets\FoundAnimal.cshtml" />
     <Content Include="Views\Home\Adopt.cshtml" />
     <Content Include="Views\Home\Catalogue.cshtml" />
+    <Content Include="Views\Map\Map.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
