--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -186,6 +186,7 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdoptController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MapController.cs" />
     <Compile Include="Controllers\PetsController.cs" />
@@ -193,6 +194,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModel.cs" />
+    <Compile Include="Models\Adopt.cs" />
     <Compile Include="Models\Breed.cs" />
     <Compile Include="Models\Example.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -301,11 +303,16 @@
     <Content Include="Views\Pets\Index.cshtml" />
     <Content Include="Views\Pets\FoundAnimal.cshtml" />
     <Content Include="Views\Home\Adopt.cshtml" />
-    <Content Include="Views\Home\Catalogue.cshtml" />
     <Content Include="Views\Map\Map.cshtml" />
     <Content Include="Views\Pets\Delete.cshtml" />
     <Content Include="Views\Pets\Details.cshtml" />
     <Content Include="Views\Pets\Edit.cshtml" />
+    <Content Include="Views\Adopt\Index.cshtml" />
+    <Content Include="Views\Adopt\Create.cshtml" />
+    <Content Include="Views\Adopt\Delete.cshtml" />
+    <Content Include="Views\Adopt\Details.cshtml" />
+    <Content Include="Views\Adopt\Catalogue.cshtml" />
+    <Content Include="Views\Adopt\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
